alignment fix

--- a/css/master.css
+++ b/css/master.css
@@ -28,6 +28,10 @@ nav a{
   padding: 0 10px;
 }
 
+body{
+  text-align:center;
+}
+
 main{
   text-align: center;
   display: inline-block;
